Add more buttons for page sections

--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,10 @@
         <header>
             <nav>
                 <button>Home</button>
+                <button>About Us</button>
                 <button>Menu</button>
-                <button>About</button>
+                <button>Hours</button>
+                <button>Contact Us</button>
             </nav>
         </header>
 
