--- a/src/template.html
+++ b/src/template.html
@@ -17,21 +17,6 @@
             </nav>
         </header>
 
-        <div id="content">
-            <div id="title">
-                <h1>Ember & Ash</h1>
-                <h3>Wood-Fired Flavors, Modern Comfort</h3>
-                <p>
-                    Welcome to Ember & Ash, where rustic cooking meets modern
-                    dining. From wood-fired flatbreads to our signature ribeye,
-                    we craft every dish with care and seasonal ingredients.
-                </p>
-                <h3>Where warmth meets flavor.</h3>
-                <form>
-                    <button>View Menu</button>
-                    <button>Reserve a Table</button>
-                </form>
-            </div>
-        </div>
+        <div id="container"></div>
     </body>
 </html>
