Add ids to buttons

--- a/src/template.html
+++ b/src/template.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <nav>
-                <button>Home</button>
-                <button>About Us</button>
-                <button>Menu</button>
-                <button>Hours</button>
-                <button>Contact Us</button>
+                <button id="home-button">Home</button>
+                <button id="about-button">About Us</button>
+                <button id="menu-button">Menu</button>
+                <button id="hours-button">Hours</button>
+                <button id="contact-button">Contact Us</button>
             </nav>
         </header>
 
