--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 
     <body>
         <header>
+            <h1>Ember & Ash</h1>
             <nav>
                 <button id="home-button">Home</button>
                 <button id="about-button">About Us</button>
